# aiogram-template

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  HELP.md  Justfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
app/: .dockerignore  Dockerfile  Dockerfile-bot  Dockerfile-migrations  alembic.ini  pyproject.toml  requirements.txt
app/bot/: .dockerignore  Dockerfile  __main__.py  main.py  pyproject.toml  settings.py  stub.pyi
app/bot/db/psql/: __init__.py  base.py
app/bot/db/psql/chat/: __init__.py  models.py
app/bot/db/psql/user/: __init__.py  models.py
app/bot/db/redis/: __init__.py
app/bot/db/redis/chat/: __init__.py  chat_model.py  chat_settings_model.py  models.py
app/bot/db/redis/chat_member/: __init__.py  chat_member_model.py
app/bot/db/redis/user/: __init__.py  models.py
app/bot/domain/chat/: dto.py  interface.py  repo.py  service.py
app/bot/domain/user/: dto.py  interface.py  repo.py  service.py
app/bot/errors/: __init__.py  aiogram_errors.py  errors.py
app/bot/filters/: cb_click_by_user.py  lazy_filter.py
app/bot/handlers/: __init__.py  chat_migrate.py
app/bot/handlers/cbs/: __init__.py  start.py  universal_close.py
app/bot/handlers/cbs/language_settings/: __init__.py  keyboards.py  main.py
app/bot/handlers/chat_member/: __init__.py  any_to_administrator.py  any_to_kicked.py  any_to_left.py  any_to_member.py  any_to_restricted.py  any_to_unhandled.py
app/bot/handlers/chat_member/my_chat_member/: __init__.py  groups.py  private.py
app/bot/handlers/cmds/: __init__.py  language_settings.py  start.py
app/bot/locales/en/: _default.ftl
app/bot/locales/en/chat_member/: chat_member.ftl  my_chat_member.ftl
app/bot/locales/en/cmds/: start.ftl  user_settings.ftl
app/bot/locales/uk/: _default.ftl
app/bot/locales/uk/chat_member/: chat_member.ftl  my_chat_member.ftl
app/bot/locales/uk/cmds/: start.ftl  user_settings.ftl
app/bot/middlewares/: check_chat_middleware.py  check_user_middleware.py  throttling_middleware.py
app/bot/storages/psql/: __init__.py  base.py
app/bot/storages/psql/chat/: __init__.py  chat_model.py  chat_settings_model.py
app/bot/storages/psql/user/: __init__.py  user_model.py  user_settings_model.py
app/bot/storages/psql/utils/: alchemy_struct.py
app/bot/storages/redis/chat/: __init__.py  chat_model.py  chat_settings_model.py
app/bot/storages/redis/chat_member/: chat_member_model.py
app/bot/storages/redis/user/: __init__.py  user_model.py  user_settings_model.py
app/bot/utils/: aiogram_data.py  alchemy_struct.py  callback_data_prefix_enums.py  callback_datas.py  fsm_manager.py
app/migrations/: .dockerignore  Dockerfile  alembic.ini  env.py  pyproject.toml  script.py.mako
app/migrations/versions/: 000000000000_initial.py
caddy/: Caddyfile
caddy/public/: index.html
psql/db-init-scripts/: citext.sh  createdb.sh
