[project]
name = "aiogram-template"
version = "0.0.1"
requires-python = "==3.13.3"
dependencies = [
    "aiogram-i18n==1.4",
    "aiogram==3.19.0",
    "alembic==1.15.2",
    "asyncpg==0.30.0",
    "fluent.runtime==0.4.0",
    "msgspec==0.19.0",
    "pydantic-settings==2.8.1",
    "redis[hiredis]==5.2.1",
    "sqlalchemy==2.0.40",
    "tzdata==2025.2",
]

[tool.uv]
package = false

[project.optional-dependencies]
dev = [
    "FTL-Extract==0.5.0",
    "isort==6.0.1",
    "pre-commit==4.2.0",
    "ruff==0.11.5",
]
lint = [
    "mypy==1.15.0",
    "types-pytz==2025.2.0.20250326",
]
uvloop = [
    "uvloop==0.21.0; sys_platform == 'linux' or sys_platform == 'darwin'",
]

[tool.isort]
py_version = 312
src_paths = ["app"]
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
split_on_trailing_comma = false
single_line_exclusions = ["."]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_gitignore = true
extend_skip = ["__pycache__"]
extend_skip_glob = ["app/bot/locales/*"]

[tool.ruff]
src = ["app"]
line-length = 120
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
    "__pycache__",
    "*.pyi",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A003",
    "ANN002", "ANN003", "ANN401",
    "C901",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D203", "D205", "D212",
    "ERA001",
    "FBT001", "FBT002",
    "FIX002",
    "I001",
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR5501",
    "PLW0120",
    "RUF001",
    "TC006",
    "TD002", "TD003"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
mypy_path = "app"
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]
allow_redefinition = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
extra_checks = true
follow_imports = "skip"
follow_imports_for_stubs = false
ignore_missing_imports = false
namespace_packages = true
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
show_absolute_path = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

disable_error_code = [
    "no-redef",
]

exclude = [
    "\\.?venv",
    "\\.idea",
    "\\.tests?",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
