[project]
name = "aiogram-template"
version = "0.0.1"
requires-python = "==3.13.5"
dependencies = [
    "app-workspace[alembic]==0.0.1",
]

[tool.uv.sources]
app-workspace = { workspace = true }

[tool.uv]
package = false

[tool.uv.workspace]
members = ["app"]

[project.optional-dependencies]
dev = [
    "FTL-Extract==0.9.0a5",
    "isort==6.0.1",
    "pre-commit==4.2.0",
    "ruff==0.12.2",
]
lint = [
    "mypy==1.16.1",
    "types-pytz==2025.2.0.20250516",
]

[tool.isort]
py_version = 313
src_paths = ["app"]
line_length = 100
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
split_on_trailing_comma = false
single_line_exclusions = ["."]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_gitignore = true
extend_skip = ["__pycache__"]
extend_skip_glob = ["app/bot/locales/*"]

[tool.ruff]
src = ["app"]
line-length = 100
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
    "__pycache__",
    "*.pyi",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A003",
    "ANN002", "ANN003", "ANN401",
    "C901",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D203", "D205", "D212",
    "ERA001",
    "FBT001", "FBT002",
    "FIX002",
    "I001",
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR5501",
    "PLW0120",
    "RUF001",
    "TC006",
    "TD002", "TD003"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
mypy_path = "app/bot"
packages = ["app"]
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]
allow_redefinition = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
extra_checks = true
follow_imports = "normal"
follow_imports_for_stubs = true
ignore_missing_imports = false
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
show_absolute_path = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

disable_error_code = [
    "assignment",
    "no-redef",
    "union-attr",
]

exclude = [
    "\\.?venv",
    "\\.idea",
    "\\.tests?",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
