[project]
name = "app-workspace"
version = "0.0.1"
dependencies = [
    "aiogram-i18n==1.4",
    "aiogram==3.20.0.post0",
    "asyncpg==0.30.0",
    "fluent.runtime==0.4.0",
    "msgspec==0.19.0",
    "pydantic-settings==2.9.1",
    "redis[hiredis]==6.0.0",
    "sqlalchemy==2.0.40",
    "tzdata==2025.2",
    "uvloop==0.21.0; sys_platform == 'linux' or sys_platform == 'darwin'"
]

[project.optional-dependencies]
alembic = [
    "alembic==1.15.2",
]
