[project]
name = "migrations"
version = "0.0.1"
dependencies = [
    "aiogram-i18n==1.4",
    "alembic-postgresql-enum==1.9.0",
    "alembic==1.17.2",
    "asyncpg==0.31.0",
    "msgspec==0.20.0",
    "pydantic-settings==2.12.0",
    "redis[hiredis]==7.1.1",
    "sqlalchemy==2.0.46",
]

[tool.uv]
package = false
