[project]
name = "migrations"
version = "0.0.1"
dependencies = [
    "aiogram-i18n==1.5",
    "alembic-postgresql-enum==1.10.0",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "msgspec==0.20.0",
    "pydantic-settings==2.13.1",
    "redis[hiredis]==7.4.0",
    "sqlalchemy>=2.0,<2.1",
]

[tool.uv]
package = false
